--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           - 7.*
           - 8.*
         prefer:
-          - 'prefer-lowest'
+          # - 'prefer-lowest'
           - 'prefer-stable'
         include:
           - laravel: '7.*'
