--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,19 @@
 {
     "name": "renoki-co/laravel-web3",
     "description": "Laravel SDK wrapper for the Web3 PHP API client that interacts with the Ethereum blockchain.",
-    "keywords": ["laravel", "php", "api", "sdk", "wrapper", "web3", "eth", "ethereum", "blockchain", "token", "contracts"],
+    "keywords": [
+        "laravel",
+        "php",
+        "api",
+        "sdk",
+        "wrapper",
+        "web3",
+        "eth",
+        "ethereum",
+        "blockchain",
+        "token",
+        "contracts"
+    ],
     "license": "Apache-2.0",
     "homepage": "https://github.com/renoki-co/laravel-web3",
     "authors": [
@@ -29,8 +41,8 @@
         "test": "vendor/bin/phpunit"
     },
     "require-dev": {
-        "mockery/mockery": "^1.5",
-        "orchestra/testbench": "^6.24.0"
+        "mockery/mockery": "^1.5|^1.4.4",
+        "orchestra/testbench": "^6.24.0|^7.0"
     },
     "config": {
         "sort-packages": true
