--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,20 +17,18 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: true
       matrix:
         php:
           - '8.0'
         laravel:
-          - 7.*
-          - 8.*
+          - 9.*
         prefer:
           # - 'prefer-lowest'
           - 'prefer-stable'
         include:
-          - laravel: '7.*'
-            testbench: '5.*'
-          - laravel: '8.*'
-            testbench: '6.*'
+          - laravel: '9.*'
+            testbench: '7.*'
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} --${{ matrix.prefer }}
 
